Correctly align the icon in button-icon

--- a/index.css
+++ b/index.css
@@ -28,3 +28,7 @@
 .link-button__group svg {
   vertical-align: bottom;
 }
+
+.link-button__icon {
+  vertical-align: middle;
+}
